[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Nikolay Tarasov <kolya.tarasov333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.11.0"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
  )/
)
'''
[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true